<resources>
    <string name="app_name">Eiga Kensaku</string>
    <string name="edittext_hint">Input keyword and search</string>
    <string name="large_text">Movie List.</string>
    <string name="operation_searching">Movie searching.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_progress_waiting">Searching...</string>
    <string name="text_progress_refresh_waiting">Refreshing...</string>
    <string name="text_result_empty">No movie matched. Try some other keywords.</string>
    <string name="text_result_failed_default">Search failed, try again please!</string>
    <string name="text_result_failed_network">Search failed, check your wifi please!</string>

    <string name="text_rv_item_title_for_test">Harry Potter</string>
    <string name="text_rv_item_year_for_test">2016</string>
    <string name="text_rv_item_type_for_test">Magical</string>
    <string name="text_rv_item_load_for_test">Loading</string>
    <string name="text_rv_menu_type_for_test">Star</string>
    <string name="text_rv_item_actor_for_test">Daniel/Emma/Jet...</string>
    <string name="text_rv_item_country_for_test">England</string>
    <string name="text_rv_item_info_for_test">A doze of students played at a agic academy belongs to England.</string>

    <string name="text_rv_menu_type_content_star">Star</string>
    <string name="text_rv_menu_type_content_unstar">Unstar</string>

    <string name="text_rv_menu_type_starred_remove">Unstar</string>

    <string name="text_rv_item_load">Loading more</string>
    <string name="text_rv_item_load_end">No more results</string>
    <string name="text_keyword_empty">Please enter a keyword.</string>

    <string name="post_cd" translatable="false">Movie post</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_star">Star</string>
    <string name="title_info">Info</string>

    <string name="warning_starred_movie_none">No starred movie yet.</string>

    <string name="settings_info">Settings.</string>

</resources>
